--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -2,37 +2,36 @@
 <ion-content ng-init="init()">
 <ion-slide-box>
 <ion-slide> 
-<div class="list list-inset">
+<div class="list list-">
+	<ion-scroll zooming="false" direction="y" style="height: 300px"> 
+		<div class="list card" ng-repeat="item in events.actividades" ng-class="color">
+		  	<div class="item item-avatar">
+				<img ng-src="img/svg/happy ({{item.categoria_id}}).svg"></img>
+				<h2 style="color: #831318;" ng-bind="item.titulo"></h2>
+				<p>FECHA - HORA</p>
+		  	</div>
 
-	<div class="list">
-		<div class="item ">
-			<span class="item col agenda_hora" >HOY	</span>
-		</div>
-		
-		<div class="item ">
-			<div class="item ">	<label class="item item-input">
-				<i class="icon ion-search placeholder-icon"></i>
-				<input type="search" placeholder="Search">
-			</label>
-		</div>
 
-	</div>
-	<ion-scroll zooming="false" direction="y" style="height: 300px">
-	<div ng-repeat="item in events.actividades"  >
-		<div class="item item-button-right" ng-class="color">
-			<a  class="item item-avatar" href="#">
-				<img src="img/svg/happy ({{item.categoria_id}}).svg" >
-			</img>
-			<b>
-				<h2 style="color:red" >{{item.titulo}}</h2></b>
-				<p ng-bind-html="item.subtitulo"></p>
-			</a>
-			<button class="button button-positive" ng-click="changeColor()">
-				voy!
-			</button>
+		  	<div class="item item-body">
+    			<img ng-src="img/svg/happy ({{item.categoria_id}}).svg" style="max-width: 100px" ></img>
+	    		<p ng-bind-html="item.subtitulo"></p>
+	    	</div>
+
+		    <div class="item tabs tabs-secondary tabs-icon-left">
+				<a class="tab-item" href="#">
+					<i class="icon ion-thumbsup"></i>
+					Voy!
+				</a>
+				<a class="tab-item" href="#">
+					<i class="icon ion-chatbox"></i>
+					Invitar
+				</a>
+				<a class="tab-item" href="#">
+					<i class="icon ion-share"></i>
+					Compartir
+				</a>
+			</div>
 		</div>
-	</div>
-	<div>
 	</ion-scroll>
 </div>
 
