--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -13,7 +13,7 @@
 
 
 		  	<div class="item item-body">
-    			<img ng-src="img/svg/happy ({{item.categoria_id}}).svg" style="max-width: 100px" ></img>
+    			<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpa1/v/t1.0-1/p160x160/10376299_10152479665823161_2372561054423118870_n.jpg?oh=6d07729642976abea512994cca77a0fc&oe=55967E30&__gda__=1432296353_f032ec81d82901422927af988b28061f"></img>
 	    		<p ng-bind-html="item.subtitulo"></p>
 	    	</div>
 
@@ -23,7 +23,7 @@
 					Voy!
 				</a>
 				<a class="tab-item" href="#">
-					<i class="icon ion-chatbox"></i>
+					<i class="icon ion-plus-round"></i>
 					Invitar
 				</a>
 				<a class="tab-item" href="#">
