Branding and style

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -46,7 +46,7 @@ body {
 }
 
  div.title.title-center.header-item{
-    color: red;
+    color: white;
      /*left: 30px;*/
      /*right: 90% !important;*/
  }
