--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -11,7 +11,7 @@ $calm:                            #7F7F7F !default;
 $balanced:                        #00ff00 !default;
 $energized:                       #ffc900 !default;
 $assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
+$royal:                           #831318 !default;
 $dark:                            #444 !default;
 
 
