--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -50,17 +50,18 @@ div.description .buy_info {
 }</style>
 <ion-view view-title="Agenda Cultural y Tur&iacute;stica">
     <ion-content zooming="false" ng-init="init()" direction="y" scroll="true" has-bouncing="true">
-        <div class="list card" ng-repeat="item in events.actividades" ng-class="color" style="height: 100%">
+        <div class="list card" bindonce  ng-repeat="item in events.actividades" ng-class="color" style="height: 100%">
             <div class="item item-avatar">
-            	<img ng-src="img/svg/happy ({{item.categoria_id}}).svg">
+            	<img bo-src="getImage(item)">
                 <h2 style="color: #831318; word-wrap: break-word;" ng-bind="item.titulo"></h2>
-                <div class="attending badge badge-assertive">&nbsp;{{item.categoria_id}}&nbsp;</div>
+                <div class="attending badge badge-assertive">&nbsp;<span bo-text="item.categoria_id"></span>&nbsp;</div>
             </div>
-            <div class="wrapper" class="item item-body"><img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpa1/v/t1.0-1/p160x160/10376299_10152479665823161_2372561054423118870_n.jpg?oh=6d07729642976abea512994cca77a0fc&oe=55967E30&__gda__=1432296353_f032ec81d82901422927af988b28061f">
+            <div class="wrapper" class="item item-body">
+            <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpa1/v/t1.0-1/p160x160/10376299_10152479665823161_2372561054423118870_n.jpg?oh=6d07729642976abea512994cca77a0fc&oe=55967E30&__gda__=1432296353_f032ec81d82901422927af988b28061f">
                 <div class="description">
-                    <p class="description_content" ng-bind-html="item.subtitulo"></p>
+                    <p class="description_content" bo-html="item.subtitulo"></p>
                     <p class="date">FECHAS - HORAS</p>
-                    <p class="buy_info">{{item.precio}}</p>
+                    <p class="buy_info" bo-text="item.precio"></p>
                 </div>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left"><a class="tab-item" href="#"><i class="icon ion-thumbsup"></i> Voy!</a> <a class="tab-item" href="#"><i class="icon ion-plus-round"></i> Invitar</a> <a class="tab-item" href="#"><i class="icon ion-share"></i> Compartir</a>
