Added dummy info Added dummy Mi lista template Added new routes

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,8 +16,8 @@
                 <ion-item><img src="img/menuHeader.png" width="100%">
                 </ion-item>
                 <ion-item nav-clear="" menu-close="" href="#/app/events"><i class="ion-help-circled size-32"></i> &nbsp;Qu&eacute; hay para hacer?</ion-item>
-                <ion-item nav-clear="" menu-close="" href="#/app/myevents"><span class="ion-flash-off size-32"></span> &nbsp; Mis Eventos</ion-item>
-                <ion-item nav-clear="" menu-close=""></ion-item>
+                <ion-item nav-clear="" menu-close="" href="#/app/voya"><span class="ion-flash-off size-32"></span> &nbsp; Mi lista</ion-item>
+                <ion-item nav-clear="" menu-close=""><i class="ion-close-round size-32"></i></ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
