--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -57,7 +57,7 @@ div.description .buy_info {
                 <div class="attending badge badge-assertive">&nbsp;<span bo-text="item.categoria_id"></span>&nbsp;</div>
             </div>
             <div class="wrapper" class="item item-body">
-            <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpa1/v/t1.0-1/p160x160/10376299_10152479665823161_2372561054423118870_n.jpg?oh=6d07729642976abea512994cca77a0fc&oe=55967E30&__gda__=1432296353_f032ec81d82901422927af988b28061f">
+            <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpa1/v/t1.0-1/p160x160/10376299_10152479665823161_2372561054423118870_n.jpg?oh=6d07729642976abea512994cca77a0fc&oe=55967E30&__gda__=1432296353_f032ec81d82901422927af988b28061f" ng-click="info()">
                 <div class="description">
                     <p class="description_content" bo-html="item.subtitulo"></p>
                     <p class="date">FECHAS - HORAS</p>
